# cdgcd

./: Cargo.toml  readme.md
etc/: cdgcd.service  cdgcd.toml
src/: config.rs  daemon.rs  dump.rs  journal.rs  lib.rs  main.rs  policy.rs  retain.rs  scan.rs  sd.rs
