[package]
name = "cdgcd"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", default-features = false, features = ["std", "derive", "help"] }
env_logger = { version = "0.11.10", default-features = false }
glob = { version = "0.3.3", default-features = false }
humantime = { version = "2.3.0", default-features = false }
inotify = { version = "0.11.1", default-features = false }
log = { version = "0.4.29", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
signal-hook = { version = "0.4.4", default-features = false, features = ["iterator"] }
toml = { version = "1.1.2", default-features = false, features = ["parse", "preserve_order", "serde"] }
users = { version = "0.11.0", default-features = false }
